# inference

./: .gitignore  CLAUDE.md  H100_swin_debug_report.md  bench.py  bench_dataset.py  bench_layers.py  benchmark_fp16_cpu.py  diagnose.py  flash.py  justify_patch.py  main.py  patches.py  pyproject.toml  run_benchmark.py  run_slurm.sh  time_forward_pass.py
benchmark/: __init__.py  config.py  memory.py  metrics.py  model.py  output.py  profiler.py  runner.py  timer.py
donut/: BENCHMARKING.md  CLAUDE.md  METRICS.md  README.md  pyproject.toml
donut/docs/: attention-backends.md  encoder-optimizations.md  speculative-decoding.md
donut/notebooks/: ablation.ipynb  audit.ipynb  bench.ipynb  story.ipynb
donut/research/: compile-static-cache.md  compile-training.md  decode-profiler.md
donut/scripts/: _common.py  audit_accel.py  audit_decoder.py  audit_encoder.py  audit_layers.py  bench_attention_kernels.py  bench_speed.py  run_ablation.sh
donut/scripts/diagnose/: nan_sdpa.py
donut/scripts/exp/: exp_kernels.sh  exp_scaling.sh  exp_token_scaling.sh
donut/scripts/inference/: audit_accel.py  bench_attention_kernels.py  bench_speed.py  predict.py
donut/scripts/inference/exp/: exp_kernels.sh  exp_scaling.sh  exp_token_scaling.sh
donut/scripts/profiling/: profile_decode.py
donut/scripts/specdec/: bench_skeleton.py
donut/scripts/train/: bench_loader.py  bench_train.py  migrate_to_aggregate_json.py  sweep_loader.sh  sweep_train.sh  train.py
donut/src/donut/: __init__.py  audit.py  bench.py  constants.py  dataset.py  metrics.py  model.py  runio.py  synthetic.py
donut/src/donut/accel/: __init__.py  compile.py  decoder_compiled.py  decoder_eager.py  decoder_fa.py  decoder_sdpa.py  encoder_sdpa.py  fa2.py  mask_cache.py  registry.py  sdpa.py  sdpa_backend.py
donut/src/donut/accel/checks/: __init__.py  numerical.py  speed.py  structural.py
donut/src/donut/specdec/: __init__.py  batched.py  draft_layers.py  skeleton.py
donut/tests/: conftest.py  test_accel_apply_revert.py  test_compile.py  test_kv_cache.py  test_numerical.py
donut_bench/: pyproject.toml  run_slurm.sh  test.py
donut_bench/analysis/: benchmark_fp16_cpu.py  justify_patch.py
donut_bench/experiments/: exp01_component_latency.sh  exp02_batch_sweep.sh  exp04_patch_ablation.sh  exp06_accel_sweep.sh
donut_bench/results/: exp02_batch_bs1.json  exp02_batch_bs2.json  exp02_batch_bs8.json  exp03_layer_breakdown.json  exp04_decoder_maxtok10.json  exp04_decoder_maxtok100.json  exp04_decoder_maxtok200.json  exp04_decoder_maxtok25.json  exp05_memory_bs2.json  exp05_memory_bs4.json  exp05_memory_bs8.json
donut_bench/scripts/: bench_accel.py  bench_dataset.py  bench_layers.py  verify_accel.py
donut_bench/src/inference/: constants.py  data.py  model.py  settings.py  timing.py
donut_bench/src/inference/accel/: __init__.py  fa2.py
donut_bench/tests/: test_sdpa_patch.py
donut_train/: METRICS.md  README.md  bench_train.py  config.yaml  constants.py  dataset.py  diagnose.ipynb  inspect_dataset.py  label_formatter.py  metrics.py  model_module.py  overfit.py  predict.py  pyproject.toml  train.py
donut_train/notebooks/: _build_notebooks.py  ablation.ipynb  diagnose.ipynb  pareto.ipynb
donut_train/scripts/: exp_batch_size.sh  exp_image_size.sh  inspect_dataset.py  migrate_to_aggregate_json.py  overfit.py
experiments/: analysis.ipynb  exp01_component_latency.sh  exp01_throughput_sweep.sh  exp02_batch_sweep.sh  exp02_stability.sh  exp03_layer_breakdown.sh  exp03_phase_breakdown.sh  exp04_cpu_baseline.sh  exp04_decoder_scaling.sh  exp04_patch_ablation.sh  exp05_decoder_efficiency.sh  exp05_memory_profile.sh  exp05_ttft_tpot.sh  exp06_sustained_throughput.sh
notebooks/: analysis.ipynb
results/: exp01_component_latency.json  exp02_batch_bs4.json  exp04_decoder_maxtok50.json  exp05_memory_bs1.json
scripts/: bench.py  bench_dataset.py  bench_layers.py
src/inference/: data.py  patches.py  saving.py  stats.py
test_data/: train.json
test_data/new_cardxie_annotations/train/: fake_01.json  fake_02.json  fake_03.json  fake_04.json  test_data.json
