[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers==4.37.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
