[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy==2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.11.2",
    "transformers==4.37.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.13",
]
