[project]
name = "donut"
version = "0.1.0"
description = "Donut model with toggleable acceleration backends"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0.0",
    "torch>=2.11.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
fa2 = ["flash-attn-4>=4.0.0b15"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.13",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/donut"]
