[project]
name = "donut"
version = "0.1.0"
description = "Donut model with toggleable acceleration backends"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0.0",
    "prettytable>=3.17.0",
    "torch>=2.11.0",
    "transformers>=5.12.0",
]

[project.optional-dependencies]
fa4 = ["flash-attn-4>=4.0.0b15"]

[dependency-groups]
dev = [
    "numpy>=2.0",
    "pytest>=8.0",
    "ruff>=0.15.13",
]
analysis = [
    "ipykernel>=7.0",
    "jupyter>=1.1",
    "matplotlib>=3.10",
    "pandas>=2.3",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: torch.compile smoke tests (deselected by default)",
    "cuda: requires CUDA",
    "fa: requires CUDA + flash-attn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/donut"]
