[project]
name = "donut-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.6.5",
    "torch>=2.12.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "pillow>=10.0.0",
    "sentencepiece>=0.1.99",
]
