[project]
name = "donut-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "donut",
    "mlflow>=3.13.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
    "typer>=0.25.1",
]
[project.optional-dependencies]
fa4 = ["flash-attn-4>=4.0.0b15"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
[tool.uv.sources]
donut = { path = "../donut", editable = true }
